--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
     <!-- Custom Fonts -->
     <script src="https://kit.fontawesome.com/8b4ab6644e.js"></script>
-    <!-- <link href="https://fonts.googleapis.com/css?family=Cinzel|Libre+Baskerville" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
     <!-- Google Analytics  -->
@@ -146,6 +145,10 @@
           <iframe width="560" height="315" src="https://www.youtube.com/embed/p7GBeuRPsO8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
+        <div class="row justify-content-center mb-3">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/s4Y0G_dfAkg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
         <div class="row justify-content-center">
           <h3>More coming soon...</h3>
         </div>
@@ -161,7 +164,8 @@
 
       <div class="row">
           <div class="col-md-8">
-              <iframe width="100%" height="400" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ60u11Ni3xokRwVg-jNgU9Yk&key=AIzaSyBr2Xh_Y0iHmX-xOoVoctwONtKpGS4IRqg" allowfullscreen></iframe>
+              <iframe width="100%" height="400" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=825+upton+way+somerdale+nj&key=AIzaSyBr2Xh_Y0iHmX-xOoVoctwONtKpGS4IRqg&zoom=10" allowfullscreen></iframe>
+              <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3063.71862892344!2d-75.04114828462164!3d39.83572577943688!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6cdecc3dd0eb9%3A0xfcf4879381afe782!2s825%20Upton%20Way%2C%20Somerdale%2C%20NJ%2008083!5e0!3m2!1sen!2sus!4v1612652881208!5m2!1sen!2sus" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> -->
           </div>
           <!-- Contact Details Column -->
           <div class="col-md-4">
