--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
           <span>ENF Dronography</span>
         </div>
         <div class="sub-title">Real Estate Aerial Photography & Video</div>
-        <div class="sub-title">215.839.6356</div>
+        <a href="tel:1-215-839-6356">
+          <div class="sub-title"> (215) 839-6356 </div>
+        </a>
+
         <a href="#" onclick="onPortfolioClick()">See our work ></a>
       </div>
 
