--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             About ENF Dronography
           </h3>
           <p> Our small group of professional drone pilots provide aerial photos and
-            videos of commerical and residential real estate in the Philadelphia and South Jersey area.
+            videos of commercial and residential real estate in the Philadelphia and South Jersey area.
             Our clients include real estate agents, homeowners, facility managers, and property managers.
             We perform all of the work ourselves to ensure quality control and don't contract work out like a lot of our larger competitors.
             <br><br>
