--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                   <h4 class="card-title">Aerial Video & Photos</h5>
                   <h4 class="card-title">$225</h5>
                   <p class="card-text">
-                    Includes 15 HD Photos and a 1 minute HD Video
+                    Includes 15 Ultra HD Photos and 1 minute professionally-edited Ultra HD Video
                   </p>
                   <a href="#" onclick="onContactClick()" class="btn btn-primary">Contact Us</a>
                 </div>
