--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@
       <hr>
 
       <div class="container mb-5">
+        <!-- Stockton Video -->
+        <div class="row justify-content-center mb-3">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/s4Y0G_dfAkg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
         <div class="row justify-content-center mb-3">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/0YstEyReHHU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
@@ -148,9 +153,6 @@
           <iframe width="560" height="315" src="https://www.youtube.com/embed/p7GBeuRPsO8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
-        <div class="row justify-content-center mb-3">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/s4Y0G_dfAkg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
 
         <div class="row justify-content-center">
           <h3>More coming soon...</h3>
